--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
     <link rel="stylesheet" href="./reset.css">
 </head>
-<body style="background: url(./images/bgc2.png) no-repeat center;
-        background-size: cover;">
+<body>
     <div class="profile-card">
         <figure class="profile-card__img">
             <img src="./images/IMG_2876.PNG" alt="...">
